Fix to find task implementation parameters also by name
Instead of just by id.
Made a generic Referable element definition, on which can be searched by either id or name.
Also refactored name/id/description parsing into that single class.

Also changed the automated generation of mappings for output parameters.

--- a/app/index.html
+++ b/app/index.html
@@ -181,6 +181,7 @@
     <script src="scripts/definition/modeldocument.js"></script>
     <script src="scripts/definition/definitiondocument.js"></script>
     <script src="scripts/definition/xmlelementdefinition.js"></script>
+    <script src="scripts/definition/referableelementdefinition.js"></script>
     <script src="scripts/definition/cmmn/definitions/cmmnelementdefinition.js"></script>
     <script src="scripts/definition/cmmn/definitions/unnamedcmmnelementdefinition.js"></script>
     <script src="scripts/definition/modeldefinition.js"></script>
