--- a/app/index.html
+++ b/app/index.html
@@ -306,6 +306,13 @@
     <script src="scripts/editors/expressioneditor.js"></script>
     <script src="scripts/editors/intellisense.js"></script>
 
+    <!-- handlebars -->
+    <script type="text/javascript" src="bower_components/handlebars/handlebars.min.js"></script>
+   
+    <!-- alpaca -->
+    <link type="text/css" href="bower_components/alpaca/dist/alpaca/bootstrap/alpaca.min.css" rel="stylesheet"/>
+    <script type="text/javascript" src="bower_components/alpaca/dist/alpaca/bootstrap/alpaca.min.js"></script>
+    
     <!-- endbower -->
     <!-- endbuild -->
 </head>
