Simple Task Preview form in the Case Model Editor

--- a/app/index.html
+++ b/app/index.html
@@ -140,6 +140,7 @@
     <script src="scripts/elements/properties/taskproperties.js"></script>
     <script src="scripts/elements/properties/humantaskproperties.js"></script>
     <script src="scripts/elements/properties/workflowproperties.js"></script>
+    <script src="scripts/editors/task/previewtaskform.js"></script>
     <script src="scripts/elements/properties/textboxproperties.js"></script>
     <script src="scripts/elements/properties/timereventproperties.js"></script>
     <script src="scripts/elements/properties/usereventproperties.js"></script>
