--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.css" />
     <link rel="stylesheet" href="bower_components/jquery.fancytree/dist/skin-lion/ui.fancytree.css" />
     <link rel="stylesheet" href="bower_components/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="bower_components/codemirror/addon/fold/foldgutter.css" />
     <link rel="stylesheet" href="bower_components/codemirror/addon/hint/show-hint.css">
     <!-- endbower -->
     <!-- endbuild -->
@@ -91,7 +92,12 @@
     <script src="bower_components/codemirror/mode/javascript/javascript.js"></script>
     <script src="bower_components/codemirror/addon/edit/matchbrackets.js"></script>
     <script src="bower_components/codemirror/addon/edit/closebrackets.js"></script>
+    <script src="bower_components/codemirror/addon/fold/brace-fold.js"></script>
+    <script src="bower_components/codemirror/addon/fold/foldcode.js"></script>
+    <script src="bower_components/codemirror/addon/fold/xml-fold.js"></script>
+    <script src="bower_components/codemirror/addon/fold/foldgutter.js"></script>
     <script src="bower_components/codemirror/addon/hint/javascript-hint.js"></script>
+    <script src="bower_components/codemirror/mode/javascript/javascript.js"></script>
     <script src="bower_components/col-resizable/colResizable-1.6.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
@@ -115,6 +121,7 @@
     <script src="scripts/settings/settings.js"></script>
     <script src="scripts/settings/settingseditor.js"></script>
     <script src="scripts/settings/settingsstorage.js"></script>
+    <script src="scripts/util/codemirrorconfig.js"></script>
     <script src="scripts/util/util.js"></script>
     <script src="scripts/util/xml.js"></script>
     <!-- endbower -->
