added permissions in dockerfile and change cafienne label

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Cafienne IDE</title>
+    <title>Qollabor IDE</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
     <!-- build:css styles/vendor.css -->
